--- a/web3/test.html
+++ b/web3/test.html
@@ -22,16 +22,16 @@
 	<!-- <script src="https://kit.fontawesome.com/8d7fa40fed.js" crossorigin="anonymous"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 
-	<link type="text/css" rel="stylesheet" href="https://css.xthang.xyz/global.css" media="all" />
-	<link type="text/css" rel="stylesheet" href="https://css.xthang.xyz/x-common.css" media="all" />
-	<link type="text/css" rel="stylesheet" href="https://css.xthang.xyz/loader.css" media="all" />
-	<link type="text/css" rel="stylesheet" href="https://css.xthang.xyz/loader-fpt.css" media="all" />
-	<!-- <link type="text/css" rel="stylesheet" href="https://css.xthang.xyz/pulsing-rings.css" media="all"> -->
-	<link type="text/css" rel="stylesheet" href="https://add-ons.xthang.xyz/snackbar.css" media="all" />
+	<link type="text/css" rel="stylesheet" href="https://xthang.xyz/static/css/global.css" media="all" />
+	<link type="text/css" rel="stylesheet" href="https://xthang.xyz/static/css/x-common.css" media="all" />
+	<link type="text/css" rel="stylesheet" href="https://xthang.xyz/static/css/loader.css" media="all" />
+	<link type="text/css" rel="stylesheet" href="https://xthang.xyz/static/css/loader-fpt.css" media="all" />
+	<!-- <link type="text/css" rel="stylesheet" href="https://xthang.xyz/static/css/pulsing-rings.css" media="all"> -->
+	<link type="text/css" rel="stylesheet" href="https://xthang.xyz/add-ons/snackbar.css" media="all" />
 	<!-- <link type="text/css" rel="stylesheet" href="/add-ons/dragMenu.css" media="all"> -->
-	<link type="text/css" rel="stylesheet" href="https://add-ons.xthang.xyz/toggle-switch.css" media="all" />
+	<link type="text/css" rel="stylesheet" href="https://xthang.xyz/add-ons/toggle-switch.css" media="all" />
 
-	<script src="https://js.xthang.xyz/global.js"></script>
+	<script src="https://xthang.xyz/static/js/global.js"></script>
 
 	<style id="font">
 		.main-wrapper {
@@ -93,7 +93,7 @@
 
 <body>
 	<div id="snackbar">Some text some message..</div>
-	<script src="https://add-ons.xthang.xyz/snackbar.js"></script>
+	<script src="https://xthang.xyz/add-ons/snackbar.js"></script>
 
 	<div id="warning-view">
 		<span class="warning-text">Please upgrade your browser to newer version</span>
@@ -2022,8 +2022,6 @@
 			</footer>
 		</div>
 	</div>
-
-	<!-- <script src="https://js.xthang.xyz/snow.js"></script> -->
 
 	<script>
 		window.addEventListener("load", function (event) {
